tests/negative/neg_pr1111c_missing_member.safe
package neg_pr1111c_missing_member

   type printable is interface
      function (self : printable) label returns string;

   type widget is record
      value : integer;

   function render of t with t: printable (item : t) returns string
      return item.label();

   function total returns integer
      item : widget = (value = 1);

      if render of widget (item) == "ok"
         return 1;
      else
         return 0;

